apps/whoami/00-whoami.yml
# Namespace for whoami
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  label:
    name: whoami

---
# Service for exposing deployment of whoami
apiVersion: v1
kind: Service
metadata:
  namespace: whoami
  name: whoami
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami

---
# Deployment of whoami
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: whoami
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---
# IngressRoute for secure whoami address
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: letsencrypt
