apps/whoami/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth-whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`whoami-open.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: letsencrypt
