apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    cert-manager.io/issuer: "le-whoami-http"
spec:
  tls:
    - hosts:
        - whoami-cert.stonegarden.dev
      secretName: tls-whoami-ingress-http
  rules:
    - host: whoami-cert.stonegarden.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
